kubernetes/apps/flux-system/flux-operator/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: ghcr.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - kube-apiserver
